--- a/package.json
+++ b/package.json
@@ -6,12 +6,14 @@
     "postinstall": "flex-plugin pre-script-check"
   },
   "dependencies": {
+    "@twilio-paste/core": "15.3.0",
+    "@twilio-paste/icons": "9.2.0",
     "@twilio/flex-plugin-scripts": "5.2.0",
+    "@types/styled-components": "^5.1.26",
+    "prop-types": "^15.7.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "prop-types": "^15.7.2",
-    "@twilio-paste/core": "15.3.0",
-    "@twilio-paste/icons": "9.2.0"
+    "styled-components": "^5.3.6"
   },
   "devDependencies": {
     "@twilio/flex-ui": "2.0.0-beta.1",
