--- a/package.json
+++ b/package.json
@@ -9,11 +9,10 @@
     "@twilio-paste/core": "15.3.0",
     "@twilio-paste/icons": "9.2.0",
     "@twilio/flex-plugin-scripts": "5.2.0",
-    "@types/styled-components": "^5.1.26",
+    "axios": "^0.27.2",
     "prop-types": "^15.7.2",
     "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "styled-components": "^5.3.6"
+    "react-dom": "17.0.2"
   },
   "devDependencies": {
     "@twilio/flex-ui": "2.0.0-beta.1",
