--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@twilio-paste/icons": "9.2.0",
     "@twilio/flex-plugin-scripts": "5.2.0",
     "axios": "^0.27.2",
+    "bowser": "^2.11.0",
     "prop-types": "^15.7.2",
     "react": "17.0.2",
     "react-dom": "17.0.2"
